// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PokemonDetailSkeleton > matches snapshot 1`] = `
<div>
  <div
    class="_bone_9b7ecb _titleBone_9b7ecb"
  />
  <div
    class="_spritesRow_9b7ecb"
  >
    <div
      class="_bone_9b7ecb _spriteBone_9b7ecb"
    />
    <div
      class="_bone_9b7ecb _spriteBone_9b7ecb"
    />
    <div
      class="_bone_9b7ecb _spriteBone_9b7ecb"
    />
    <div
      class="_bone_9b7ecb _spriteBone_9b7ecb"
    />
  </div>
  <div
    class="_tagsRow_9b7ecb"
  >
    <div
      class="_bone_9b7ecb _tagBone_9b7ecb"
    />
    <div
      class="_bone_9b7ecb _tagBone_9b7ecb"
    />
  </div>
  <div
    class="_bone_9b7ecb _audioBone_9b7ecb"
  />
  <div
    class="_bone_9b7ecb _textBone_9b7ecb"
  />
  <div
    class="_bone_9b7ecb _textBone_9b7ecb"
  />
  <div
    class="_bone_9b7ecb _textBone_9b7ecb"
  />
  <div
    class="_stats_9b7ecb"
  >
    <div
      class="_statBone_9b7ecb"
    >
      <div
        class="_bone_9b7ecb _statLabelBone_9b7ecb"
      />
      <div
        class="_bone_9b7ecb _statProgressBone_9b7ecb"
      />
    </div>
    <div
      class="_statBone_9b7ecb"
    >
      <div
        class="_bone_9b7ecb _statLabelBone_9b7ecb"
      />
      <div
        class="_bone_9b7ecb _statProgressBone_9b7ecb"
      />
    </div>
    <div
      class="_statBone_9b7ecb"
    >
      <div
        class="_bone_9b7ecb _statLabelBone_9b7ecb"
      />
      <div
        class="_bone_9b7ecb _statProgressBone_9b7ecb"
      />
    </div>
    <div
      class="_statBone_9b7ecb"
    >
      <div
        class="_bone_9b7ecb _statLabelBone_9b7ecb"
      />
      <div
        class="_bone_9b7ecb _statProgressBone_9b7ecb"
      />
    </div>
    <div
      class="_statBone_9b7ecb"
    >
      <div
        class="_bone_9b7ecb _statLabelBone_9b7ecb"
      />
      <div
        class="_bone_9b7ecb _statProgressBone_9b7ecb"
      />
    </div>
    <div
      class="_statBone_9b7ecb"
    >
      <div
        class="_bone_9b7ecb _statLabelBone_9b7ecb"
      />
      <div
        class="_bone_9b7ecb _statProgressBone_9b7ecb"
      />
    </div>
  </div>
</div>
`;

exports[`PokemonDetailSkeleton Component > should match the DOM structure snapshot 1`] = `
<div
  aria-busy="true"
  aria-label="Loading pokemon details"
  aria-live="polite"
  class="_detailsSkeleton_9b7ecb"
>
  <div
    class="_bone_9b7ecb _audioBone_9b7ecb"
  />
  <div
    class="_tagsRow_9b7ecb"
  >
    <div
      class="_bone_9b7ecb _tagBone_9b7ecb"
    />
    <div
      class="_bone_9b7ecb _tagBone_9b7ecb"
    />
  </div>
  <div
    class="_bone_9b7ecb _textBone_9b7ecb"
  />
  <div
    class="_bone_9b7ecb _textBone_9b7ecb"
  />
  <div
    class="_bone_9b7ecb _textBone_9b7ecb"
  />
</div>
`;
